# KeySpaceBreaker

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  client.cpp  main.cpp  server.cpp  test_text.txt  words.txt  words.txt.rtf
files/: english_trigrams.txt
include/: BASE64.hpp  CaesarEncryptedMessage.hpp  ClientSession.hpp  CoordServ.hpp  Coordinator.hpp  Decryptor.hpp  Dictionary.hpp  EncryptedMessage.hpp  JSON_Protocol.hpp  KasiskiAnalyzer.hpp  NetworkWorker.hpp  PeerSession.hpp  Policy.hpp  StaticPolicy.hpp  Unit.hpp  VigenereEncryptedMessage.hpp  WorkerSession.hpp  config.hpp  coord_config.hpp  enums.hpp  worker_config.hpp
src/: CaesarEncryptedMessage.cpp  CaesarEncryptedMessage.hpp  ClientSession.cpp  CoordServ.cpp  Coordinator.cpp  Coordinator.hpp  Decryptor.cpp  Dictionary.cpp  EncryptedMessage.hpp  JSON_Protocol.cpp  KasiskiAnalyzer.cpp  NetworkWorker.cpp  PeerSession.cpp  Policy.hpp  StaticPolicy.cpp  StaticPolicy.hpp  Unit.hpp  VigenereEncryptedMessage.cpp  Worker.cpp  Worker.hpp  WorkerSession.cpp  client.cpp  client.hpp  coord_config.cpp  main.cpp  main_worker.cpp  run_coord.cpp  run_worker.cpp  server.cpp  test  test.cpp  text.txt  worker_config.cpp
tests/: CMakeLists.txt  data_tests.cpp  gen_tests.py  tests.cpp  tests.hpp  tests_config.hpp
tests/data/: t-01-caesar-shift1-in.txt  t-01-caesar-shift1-meta.json  t-02-caesar-shift3-in.txt  t-02-caesar-shift3-meta.json  t-03-caesar-shift7-in.txt  t-03-caesar-shift7-meta.json  t-04-caesar-shift13-in.txt  t-04-caesar-shift13-meta.json  t-05-caesar-shift19-in.txt  t-05-caesar-shift19-meta.json  t-06-caesar-shift25-in.txt  t-06-caesar-shift25-meta.json  t-06-caesar-shift25-out.txt  t-07-caesar-short-in.txt  t-07-caesar-short-meta.json  t-08-vigenere-brute-ab-in.txt  t-08-vigenere-brute-ab-meta.json  t-09-vigenere-brute-key-in.txt  t-09-vigenere-brute-key-meta.json  t-10-vigenere-brute-code-in.txt  t-10-vigenere-brute-code-meta.json  t-11-vigenere-fast-key-in.txt  t-11-vigenere-fast-key-meta.json  t-12-vigenere-fast-code-in.txt  t-12-vigenere-fast-code-meta.json  t-13-vigenere-fast-money-in.txt  t-13-vigenere-fast-money-meta.json  t-13-vigenere-fast-money-sol.txt
